--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mcp-client",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node mcp-client.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "body-parser": "^2.2.0",
+    "c8": "^10.1.3",
     "canvas": "^3.2.0",
     "express": "^5.1.0"
   }
