docs: add reference to official MCP inspector tool
- Document modelcontextprotocol/inspector as alternative
- Add dependency for official inspector package
- Include video reference for debugging workflow

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@modelcontextprotocol/inspector": "^0.17.2",
     "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "body-parser": "^2.2.0",
     "c8": "^10.1.3",
