chore: configure npm start script to use intercept proxy
- Update start script to pipe through mcp-client and intercept.js
- Configure logging to var/mcp-server-filesystem directory
- Format settings.local.json for consistency

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node mcp-client.js",
+    "start": "node mcp-client -- node intercept.js var/mcp-server-filesystem -- node node_modules/.bin/mcp-server-filesystem .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ln": "/bin/bash link.sh"
   },
