--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/inspector": "^0.17.2",
+    "@modelcontextprotocol/sdk": "^1.20.2",
     "@modelcontextprotocol/server-filesystem": "^2025.8.21",
     "body-parser": "^2.2.0",
     "c8": "^10.1.3",
