--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node mcp-client -- node intercept.js var/mcp-server-filesystem -- node node_modules/.bin/mcp-server-filesystem .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ln": "/bin/bash link.sh"
+    "ln": "/bin/bash link.sh",
+    "ts:build": "tsc",
+    "ts:watch": "tsc --watch",
+    "ts:dev": "tsx src/server.ts",
+    "ts:inspect": "/bin/bash ts:inspect.sh"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +24,10 @@
     "c8": "^10.1.3",
     "canvas": "^3.2.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
