--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^2.2.0",
     "c8": "^10.1.3",
     "canvas": "^3.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
